# rabbitmq_study_case

./: manage.py  pyproject.toml
stock_model_app/: api.py  apps.py  controllers.py  exception_handler.py
stock_model_app/connector/: stock_data_connector.py
stock_model_app/connector/interface/: __init__.py  data_connector_interface.py
stock_model_app/infrastructure/: __init__.py  consumers.py  messaging_client.py
stock_model_app/migrations/: 0001_initial.py  0002_alter_stockmodel_id.py  0003_alter_stockmodel_change_alter_stockmodel_close_price_and_more.py  0004_alter_stockmodel_id.py  0005_alter_stockmodel_change_alter_stockmodel_close_price_and_more.py  0006_alter_stockmodel_change_alter_stockmodel_close_price_and_more.py  0007_alter_stockmodel_id.py  0008_stockmodel_created_at_alter_stockmodel_table.py  0009_alter_stockmodel_created_at.py  0010_alter_stockmodel_created_at_alter_stockmodel_title.py  0011_alter_stockmodel_created_at.py
stock_model_app/models/: __init__.py  stock_price.py
stock_model_app/schemas/: __init__.py  stock_price_schema.py
stock_model_app/services/: __init__.py  get_all_stock_service.py  proccess_quotations_service.py
stock_model_app/utils/: __init__.py  check_if_decimal_field_is_none.py  constants.py  generic_not_found_exception.py  service_layer_exception.py
stock_model_project/: asgi.py  settings.py  urls.py  wsgi.py
